--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html>
   <head>
     <title>Test Page</title>
+    <style>
+      body {
+        background: white;
+        color: black;
+        font-family: sans-serif;
+        padding: 2rem;
+      }
+    </style>
   </head>
   <body>
     <h1>Hello, GitHub Pages!</h1>
