--- a/index.html
+++ b/index.html
@@ -1,18 +1,76 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Page</title>
-    <style>
-      body {
-        background: white;
-        color: black;
-        font-family: sans-serif;
-        padding: 2rem;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>If you see this, it's working 🎉</p>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Website</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      background: #333;
+      color: #fff;
+      padding: 1em 2em;
+      text-align: center;
+    }
+
+    nav {
+      margin-top: 1em;
+    }
+
+    nav a {
+      margin: 0 15px;
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    main {
+      padding: 2em;
+      max-width: 800px;
+      margin: auto;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1em;
+      background: #eee;
+      margin-top: 3em;
+      font-size: 0.9em;
+      color: #777;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Welcome to My Website</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="projects.html">Projects</a>
+      <a href="blog.html">Blog</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>Hello 👋</h2>
+    <p>This is the homepage of my personal site.</p>
+    <p>Use the navigation above to check out my <strong>projects</strong> and read my <strong>blog</strong>.</p>
+  </main>
+
+  <footer>
+    &copy; 2025 My Website. All rights reserved.
+  </footer>
+
+</body>
 </html>
