--- a/blog.html
+++ b/blog.html
@@ -63,9 +63,12 @@
   </header>
 
   <main>
-    <h2>This is a placeholder</h2>
-    <p>You will see my blogs here.</p>
+    <h2>Blogs</h2>
+    <ul>
+      <li><a href="posts/post1.html">Migration to github</a> — September 15, 2025</li>
+    </ul>
   </main>
+
 
   <footer>
     &copy; 2025 My Website. All rights reserved.
