--- a/projects.html
+++ b/projects.html
@@ -7,8 +7,8 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 2rem auto;
-      padding: 1rem;
+      margin: 0;
+      padding: 0;
       background: #f9f9f9;
       color: #333;
       max-width: 800px;
