--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="blog.html">Blog</a>
+      <a href="blog.html">Dev Blog</a>
+      <a href="about.html">About me</a>
     </nav>
   </header>
 
