--- a/blog.html
+++ b/blog.html
@@ -58,7 +58,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
-      <a href="blog.html">Blog</a>
+      <a href="about.html">About me</a>
     </nav>
   </header>
 
