--- a/projects.html
+++ b/projects.html
@@ -82,8 +82,8 @@
     <h1>Projects</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="projects.html">Projects</a>
       <a href="blog.html">Blog</a>
+      <a href="about.html">About me</a>
     </nav>
   </header>
 
