--- a/projects.html
+++ b/projects.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0;
+      margin: 0 auto;
       padding: 0;
       background: #f9f9f9;
       color: #333;
