--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
     <h1>Projects</h1>
     <nav>
       <a href="index.html">Home</a>
-      <a href="blog.html">Blog</a>
+      <a href="blog.html">Dev blog</a>
       <a href="about.html">About me</a>
     </nav>
   </header>
