--- a/about.html
+++ b/about.html
@@ -68,7 +68,7 @@
   </main>
 
   <footer>
-    &copy; 2025 My Website. All rights reserved.
+    &copy; 2025 Your Name. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
 </body>
