--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </main>
 
   <footer>
-    &copy; 2025 My Website. All rights reserved.
+    &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
 </body>
