--- a/about.html
+++ b/about.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About Me</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -19,6 +23,8 @@
       padding: 1em 2em;
       text-align: center;
     }
+
+    
 
     nav {
       margin-top: 1em;
@@ -54,7 +60,7 @@
 <body>
 
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>About Me</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -63,12 +69,25 @@
   </header>
 
   <main>
-    <h2>Hello 👋</h2>
-    <p>This is the about me section.</p>
+    <h2>Who am I?</h2>
+    <p>My name is Zach Music.</p>
+    <p>I’m currently working as a helpdesk technician with over 3 years of experience supporting users and solving technical issues. I have a strong passion for coding and software development, which has motivated me to pursue an Associate’s/bachelor's degree in Computer Science.</p>
+    <p>This site is a space where I track and share my progress on personal projects, including a game I’m developing, as well as coursework from school. My career goal is to work in low-level C++ development—ideally for game engines—though I also find web development to be really exciting and fun to explore.</p>
+    <p>When I’m not coding or troubleshooting, you can usually find me hanging out with friends playing Dungeons & Dragons and video games. I’m also deeply interested in world-building for my game, including researching real-life armor, weapons, and history to add depth and authenticity.</p>
+    <p>Please feel free to reach out regarding anything—I’m always open to connecting, collaborating, and learning from others.</p>
   </main>
 
   <footer>
     &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
+    <p>
+    Connect with me: 
+    <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i> GitHub
+    </a> | 
+    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i> LinkedIn
+    </a>
+  </p>
   </footer>
 
 </body>
