--- a/about.html
+++ b/about.html
@@ -72,9 +72,9 @@
     <h2>Who am I?</h2>
     <p>My name is Zach Music.</p>
     <p>I’m currently working as a helpdesk technician with over 3 years of experience supporting users and solving technical issues. I have a strong passion for coding and software development, which has motivated me to pursue an Associate’s/bachelor's degree in Computer Science.</p>
-    <p>This site is a space where I track and share my progress on personal projects, including a game I’m developing, as well as coursework from school. My career goal is to work in low-level C++ development—ideally for game engines—though I also find web development to be really exciting and fun to explore.</p>
+    <p>This site is a space where I track and share my progress on personal projects, including a game I’m developing, as well as coursework from school. My career goal is to work in low-level C++ development. Ideally it will be for game engines, though I also find web development to be really exciting and fun to explore.</p>
     <p>When I’m not coding or troubleshooting, you can usually find me hanging out with friends playing Dungeons & Dragons and video games. I’m also deeply interested in world-building for my game, including researching real-life armor, weapons, and history to add depth and authenticity.</p>
-    <p>Please feel free to reach out regarding anything—I’m always open to connecting, collaborating, and learning from others.</p>
+    <p>Please feel free to reach out regarding anything. I’m always open to connecting, collaborating, and learning from others.</p>
   </main>
 
   <footer>
@@ -84,9 +84,12 @@
     <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
       <i class="fab fa-github"></i> GitHub
     </a> | 
-    <a href="https://linkedin.com/in/yourprofile" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-linkedin"></i> LinkedIn
+    <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i> WIP
     </a>
+    <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-itch-io"></i> Itch.io
+</a>
   </p>
   </footer>
 
