--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dev Blog</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -54,7 +58,7 @@
 <body>
 
   <header>
-    <h1>Welcome to My Website</h1>
+    <h1>Dev Blog</h1>
     <nav>
       <a href="index.html">Home</a>
       <a href="projects.html">Projects</a>
@@ -71,6 +75,18 @@
 
 
   <footer>
+    <p>
+    Connect with me: 
+    <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i> GitHub
+    </a> | 
+    <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i> WIP
+    </a>
+    <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-itch-io"></i> Itch.io
+</a>
+  </p>
     &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
