--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website</title>
+  <title>My Website(WIP title)</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -99,20 +103,32 @@
   </header>
 
   <main id="main-content">
-    <h2 id="section-title">Hello 👋</h2>
-    <p id="section-text">This is the homepage of my personal site.</p>
+    <h2 id="section-title">Hello!</h2>
+    <p id="section-text">Welcome to my website! There are many things to explore here.</p>
     <div id="progress-dots"></div>
   </main>
 
   <footer>
+    <p>
+    Connect with me: 
+    <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i> GitHub
+    </a> | 
+    <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i> WIP
+    </a>
+    <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-itch-io"></i> Itch.io
+</a>
+  </p>
     &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
   <script>
     const sections = [
       {
-        title: "Hello 👋",
-        text: "This is the homepage of my personal site."
+        title: "Hello!",
+        text: "Welcome to my website! There are many things to explore here."
       },
       {
         title: "Projects",
