--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Github Projects</title>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -140,6 +144,18 @@
   </script>
 
   <footer>
+    <p>
+    Connect with me: 
+    <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-github"></i> GitHub
+    </a> | 
+    <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+      <i class="fab fa-linkedin"></i> WIP
+    </a>
+    <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
+  <i class="fab fa-itch-io"></i> Itch.io
+</a>
+  </p>
     &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
