--- a/projects.html
+++ b/projects.html
@@ -11,11 +11,10 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      margin: 0 auto;
+      margin: 0;
       padding: 0;
       background: #f9f9f9;
       color: #333;
-      max-width: 800px;
     }
 
     header {
@@ -66,8 +65,9 @@
     }
 
     main {
+      max-width: 800px;
+      margin: auto;
       padding: 2em;
-      margin-bottom: 2em;
     }
 
     footer {
