--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,12 @@
       text-decoration: underline;
     }
 
+    #projects {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 1em 2em;
+    }
+
     .repo {
       border-bottom: 1px solid #ddd;
       padding: 1em 0;
