--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>My Website(WIP title)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My Website (Slider Version)</title>
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -49,15 +49,27 @@
       max-width: 800px;
       margin: auto;
       padding: 2em;
-      text-align: center;
-      transition: opacity 0.5s ease;
-      opacity: 1;
-      user-select: none;
       position: relative;
+      user-select: none;
+      overflow: hidden;
     }
 
-    main.hidden {
-      opacity: 0;
+    .slides {
+      display: flex;
+      transition: transform 0.5s ease;
+      will-change: transform;
+    }
+
+    .slide {
+      min-width: 100%;
+      box-sizing: border-box;
+      padding: 0 1em;
+      text-align: center;
+      flex-shrink: 0;
+    }
+
+    .slide h2 {
+      margin-top: 0;
     }
 
     #progress-dots {
@@ -65,6 +77,7 @@
       justify-content: center;
       margin-top: 1em;
       gap: 10px;
+      user-select: none;
     }
 
     .dot {
@@ -78,6 +91,34 @@
 
     .dot.active {
       background: #333;
+    }
+
+    .arrow {
+      position: absolute;
+      top: 50%;
+      transform: translateY(-50%);
+      background: rgba(51, 51, 51, 0.6);
+      border: none;
+      color: white;
+      font-size: 1.5em;
+      padding: 0.3em 0.6em;
+      cursor: pointer;
+      user-select: none;
+      border-radius: 3px;
+      z-index: 10;
+      transition: background-color 0.3s ease;
+    }
+
+    .arrow:hover {
+      background: rgba(51, 51, 51, 0.9);
+    }
+
+    .arrow-left {
+      left: 10px;
+    }
+
+    .arrow-right {
+      right: 10px;
     }
 
     footer {
@@ -103,24 +144,27 @@
   </header>
 
   <main id="main-content">
-    <h2 id="section-title">Hello!</h2>
-    <p id="section-text">Welcome to my website! There are many things to explore here.</p>
+    <button class="arrow arrow-left" aria-label="Previous slide">&#10094;</button>
+    <div class="slides" id="slides-container">
+      <!-- Slides will be injected here -->
+    </div>
+    <button class="arrow arrow-right" aria-label="Next slide">&#10095;</button>
     <div id="progress-dots"></div>
   </main>
 
   <footer>
     <p>
-    Connect with me: 
-    <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-github"></i> GitHub
-    </a> | 
-    <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
-      <i class="fab fa-linkedin"></i> WIP
-    </a>
-    <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
-  <i class="fab fa-itch-io"></i> Itch.io
-</a>
-  </p>
+      Connect with me:
+      <a href="https://github.com/bastionwolfe" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-github"></i> GitHub
+      </a> |
+      <a href="https://linkedin.com" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-linkedin"></i> WIP
+      </a>
+      <a href="https://itch.io/profile/vinylocean" target="_blank" rel="noopener noreferrer">
+        <i class="fab fa-itch-io"></i> Itch.io
+      </a>
+    </p>
     &copy; 2025 Zach Music. Released under the <a href="https://opensource.org/licenses/MIT" target="_blank">MIT License</a>.
   </footer>
 
@@ -148,22 +192,30 @@
       }
     ];
 
-    let current = 0;
-    let canScroll = true;
-
-    const main = document.getElementById('main-content');
-    const title = document.getElementById('section-title');
-    const text = document.getElementById('section-text');
+    const slidesContainer = document.getElementById('slides-container');
     const dotsContainer = document.getElementById('progress-dots');
+    const leftArrow = document.querySelector('.arrow-left');
+    const rightArrow = document.querySelector('.arrow-right');
 
+    let currentIndex = 0;
+    let isTransitioning = false;
+
+    // Create slides
+    sections.forEach(({title, text}) => {
+      const slide = document.createElement('div');
+      slide.classList.add('slide');
+      slide.innerHTML = `<h2>${title}</h2><p>${text}</p>`;
+      slidesContainer.appendChild(slide);
+    });
+
+    // Create dots
     sections.forEach((_, idx) => {
       const dot = document.createElement('div');
       dot.classList.add('dot');
       if (idx === 0) dot.classList.add('active');
       dot.addEventListener('click', () => {
-        if (canScroll && current !== idx) {
-          goToSection(idx);
-        }
+        if (isTransitioning || currentIndex === idx) return;
+        goToSlide(idx);
       });
       dotsContainer.appendChild(dot);
     });
@@ -172,49 +224,51 @@
 
     function updateDots() {
       dots.forEach((dot, idx) => {
-        dot.classList.toggle('active', idx === current);
+        dot.classList.toggle('active', idx === currentIndex);
       });
     }
 
-    function updateSection(direction) {
-      if (!canScroll) return;
-
-      let nextIndex = current;
-      if (direction === 'down' && current < sections.length - 1) {
-        nextIndex++;
-      } else if (direction === 'up' && current > 0) {
-        nextIndex--;
-      } else {
-        return;
-      }
-
-      goToSection(nextIndex);
-    }
-
-    function goToSection(idx) {
-      canScroll = false;
-      main.classList.add('hidden');
-
+    function goToSlide(idx) {
+      if (idx < 0 || idx >= sections.length) return;
+      isTransitioning = true;
+      currentIndex = idx;
+      slidesContainer.style.transform = `translateX(-${100 * currentIndex}%)`;
+      updateDots();
+      // Wait for transition to finish before allowing another slide
       setTimeout(() => {
-        current = idx;
-        title.textContent = sections[current].title;
-        text.textContent = sections[current].text;
-        updateDots();
-        main.classList.remove('hidden');
-        canScroll = true;
+        isTransitioning = false;
       }, 500);
     }
 
-    window.addEventListener('wheel', e => {
-      const direction = e.deltaY > 0 ? 'down' : 'up';
-      updateSection(direction);
+    leftArrow.addEventListener('click', () => {
+      if (isTransitioning) return;
+      goToSlide(currentIndex - 1);
     });
 
+    rightArrow.addEventListener('click', () => {
+      if (isTransitioning) return;
+      goToSlide(currentIndex + 1);
+    });
+
+    // Scroll wheel navigation
+    window.addEventListener('wheel', e => {
+      if (isTransitioning) return;
+      if (e.deltaY > 0) {
+        goToSlide(currentIndex + 1);
+      } else if (e.deltaY < 0) {
+        goToSlide(currentIndex - 1);
+      }
+    }, {passive: true});
+
+    // Keyboard navigation
     window.addEventListener('keydown', e => {
-      if (e.key === 'ArrowDown') updateSection('down');
-      if (e.key === 'ArrowUp') updateSection('up');
+      if (isTransitioning) return;
+      if (e.key === 'ArrowRight' || e.key === 'ArrowDown') {
+        goToSlide(currentIndex + 1);
+      } else if (e.key === 'ArrowLeft' || e.key === 'ArrowUp') {
+        goToSlide(currentIndex - 1);
+      }
     });
   </script>
-
 </body>
 </html>
