--- a/about.html
+++ b/about.html
@@ -73,7 +73,8 @@
     <p>My name is Zach Music.</p>
     <p>I’m currently working as a helpdesk technician with over 3 years of experience supporting users and solving technical issues. I have a strong passion for coding and software development, which has motivated me to pursue an Associate’s/bachelor's degree in Computer Science.</p>
     <p>This site is a space where I track and share my progress on personal projects, including a game I’m developing, as well as coursework from school. My career goal is to work in low-level C++ development. Ideally it will be for game engines, though I also find web development to be really exciting and fun to explore.</p>
-    <p>When I’m not coding or troubleshooting, you can usually find me hanging out with friends playing Dungeons & Dragons and video games. I’m also deeply interested in world-building for my game, including researching real-life armor, weapons, and history to add depth and authenticity.</p>
+    <p>I got into programming through my first technology orientated position. I was able to excel to the point where I was able to use python and bash to script automations. From there I did a few gamejams with friends and was introduce to light html coding on websites. These experiences kept me engaged and working on my codes all while not giving me a sense of fatigue.</p>
+    <p>When I’m not coding or troubleshooting, you can usually find me hanging out with friends playing Dungeons & Dragons and video games. I’m also deeply interested in world-building for my game, including researching real-life armor, weapons, and history to add depth and authenticity. I believe a good mix of reality and fiction is what makes a great game push boundries.</p>
     <p>Please feel free to reach out regarding anything. I’m always open to connecting, collaborating, and learning from others.</p>
   </main>
 
