--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
   function loadFileContent(repoName, path, container) {
     const existingPre = container.querySelector('pre');
     if (existingPre) {
-      existingPre.classList.toggle('hiddencode');
+      existingPre.classList.toggle('hidden-code');
       return;
     }
       
