--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       flex-shrink: 0;
     }
 
+    @media (max-width: 820px) {
+      main, footer {
+        max-width: 100%;
+        padding: 1em;
+      }
+    }
+
     nav {
       margin-top: 1em;
     }
