--- a/blog.html
+++ b/blog.html
@@ -70,6 +70,7 @@
     <h2>Blogs</h2>
     <ul>
       <li><a href="posts/post1.html">Migration to github</a> — September 15, 2025</li>
+      <li><a href="posts/post2.html">Physics Galore!</a> — October 02, 2025</li>
     </ul>
   </main>
 
