--- a/blog.html
+++ b/blog.html
@@ -71,7 +71,8 @@
     <ul>
       <li><a href="posts/post1.html">Migration to github</a> — September 15, 2025</li>
       <li><a href="posts/post2.html">Physics Galore!</a> — October 02, 2025</li>
-      <li><a href="posts/post2.html">armor breaking and physics</a> — October 08, 2025</li>
+      <li><a href="posts/post3.html">armor breaking and physics</a> — October 08, 2025</li>
+      <li><a href="posts/post4.html">Back again!</a> — October 20, 2025</li>
     </ul>
   </main>
 
