--- a/blog.html
+++ b/blog.html
@@ -73,6 +73,7 @@
       <li><a href="posts/post2.html">Physics Galore!</a> — October 02, 2025</li>
       <li><a href="posts/post3.html">armor breaking and physics</a> — October 08, 2025</li>
       <li><a href="posts/post4.html">Back again!</a> — October 20, 2025</li>
+      <li><a href="posts/post5.html">Happy Halloween!</a> — October 31, 2025</li>
     </ul>
   </main>
 
