Add new blog post link for Bonus Blog

--- a/blog.html
+++ b/blog.html
@@ -75,6 +75,7 @@
       <li><a href="posts/post4.html">Back again!</a> — October 20, 2025</li>
       <li><a href="posts/post5.html">Happy Halloween!</a> — October 31, 2025</li>
       <li><a href="posts/post6.html">Low-Leveling works</a> — November 10, 2025</li>
+      <li><a href="posts/post7.html">Bonus Blog</a> — November 17, 2025</li>
     </ul>
   </main>
 
